# UESTC_ROBOT_LRD

./: README.md
Code/CleanRobot/: README.md
Code/MowingRobot/: PIBot_ROS.md  README.md
Code/MowingRobot/PIBot_ROS/: .pibot_init_env.sh.swp  README.md  README_BAK.md
Code/MowingRobot/PIBot_ROS/pibot_upstart/: pibot_start.sh  pibot_stop.sh
Code/MowingRobot/PIBot_ROS/pypibot/transport/: dataholder.py  transport.py
Code/MowingRobot/PIBot_ROS/ros_ws/src/: .gitignore
Code/MowingRobot/PIBot_ROS/ros_ws/src/common_utils/src/: common_utils.cpp
Code/MowingRobot/PIBot_ROS/ros_ws/src/imu_filter_madgwick/: CMakeLists.txt
Code/MowingRobot/PIBot_ROS/ros_ws/src/ipa_coverage_planning/ipa_building_msgs/: CMakeLists.txt
Code/MowingRobot/PIBot_ROS/ros_ws/src/ipa_coverage_planning/ipa_building_navigation/: package.xml
Code/MowingRobot/PIBot_ROS/ros_ws/src/ipa_coverage_planning/ipa_room_exploration/: CMakeLists.txt  package.xml
Code/MowingRobot/PIBot_ROS/ros_ws/src/laserscan_to_pointcloud/: package.xml
Code/MowingRobot/PIBot_ROS/ros_ws/src/laserscan_to_pointcloud/src/: laserscan_to_pointcloud.cpp
Code/MowingRobot/PIBot_ROS/ros_ws/src/pibot/: CMakeLists.txt
Code/MowingRobot/PIBot_ROS/ros_ws/src/pibot/launch/: navigation_multi_demo.launch  start_amcl.launch  start_carto_without_odom.launch  stop_carto.launch  t_cartographer.launch  t_cartographer_without_odom.launch  t_gmapping.launch
Code/MowingRobot/PIBot_ROS/ros_ws/src/pibot/scripts/: get_pos_demo.py  navigation_multi_goals.py  teleop_twist_keyboard.py
Code/MowingRobot/PIBot_ROS/ros_ws/src/pibot_3dsensor/config/: astra_camera.yaml
Code/MowingRobot/PIBot_ROS/ros_ws/src/pibot_3dsensor/launch/: astra.launch  xtion.launch
Code/MowingRobot/PIBot_ROS/ros_ws/src/pibot_bringup/: CMakeLists.txt
Code/MowingRobot/PIBot_ROS/ros_ws/src/pibot_bringup/config/: joystick-holonomic.config.yaml  joystick.config.yaml
Code/MowingRobot/PIBot_ROS/ros_ws/src/pibot_bringup/launch/: bringup_with_imu.launch  usb_camera.launch
Code/MowingRobot/PIBot_ROS/ros_ws/src/pibot_bringup/src/: base_driver.cpp  serial_transport2.cpp
Code/MowingRobot/PIBot_ROS/ros_ws/src/pibot_description/launch/: demo_urdf.launch
Code/MowingRobot/PIBot_ROS/ros_ws/src/pibot_description/urdf/: apollo.urdf.xacro  apolloX.urdf.xacro  hera.urdf.xacro  pibot.urdf.xacro
Code/MowingRobot/PIBot_ROS/ros_ws/src/pibot_imu/src/: pibot_imu.cpp
Code/MowingRobot/PIBot_ROS/ros_ws/src/pibot_lidar/launch/: astra.launch  kinectV1.launch  (+1 more)
Code/MowingRobot/PIBot_ROS/ros_ws/src/pibot_msgs/: CMakeLists.txt
Code/MowingRobot/PIBot_ROS/ros_ws/src/pibot_msgs/msg/: Action.msg  NaviStatus.msg
Code/MowingRobot/PIBot_ROS/ros_ws/src/pibot_msgs/srv/: NaviParams.srv  Relocation.srv  SetMapParams.srv  SetPoseParams.srv
Code/MowingRobot/PIBot_ROS/ros_ws/src/pibot_slam_3d/: CMakeLists.txt  package.xml
Code/MowingRobot/PIBot_ROS/rules/: 98-pibot-usb.rules
Code/MowingRobot/Robot_ROS_APP/devel/: _setup_util.py
Code/MowingRobot/Robot_ROS_APP/src/ros_merge_test/include/: mapping.h  senddata.h
Code/MowingRobot/Robot_ROS_APP/src/ros_merge_test/src/: senddata.cpp  uwb.cpp
Code/MowingRobot/stereo_yolo/: catpure_photo.py
Code/MowingRobot/stereo_yolo/obj_det/src/rknn_yolov5_demo/: CMakeLists.txt  package.xml
Code/MowingRobot/stereo_yolo/obj_det/src/rknn_yolov5_demo/include/rknn_yolov5_demo/: detection.h  preprocess.h  pub_info.h  ranging.h
Code/MowingRobot/stereo_yolo/obj_det/src/rknn_yolov5_demo/include/rknn_yolov5_demo/Utils/: UESTC_queue.h
Code/MowingRobot/stereo_yolo/obj_det/src/rknn_yolov5_demo/msg/: dis_info.msg  dis_info_array.msg
Code/MowingRobot/stereo_yolo/obj_det/src/rknn_yolov5_demo/src/: detection.cc  main.cc  postprocess.cc  preprocess.cc  pub_info.cc  ranging.cc  sub_dis.cc
Code/MowingRobot/stereo_yolo/rknpu1/examples/rknn_yolov5_demo/: CMakeLists.txt
Code/MowingRobot/stereo_yolo/rknpu1/examples/rknn_yolov5_simple_demo/: CMakeLists.txt
Code/MowingRobot/stereo_yolo/rknpu2/examples/rknn_yolov5_demo/: CMakeLists.txt  build-linux_RK3588.sh
Code/MowingRobot/stereo_yolo/rknpu2/examples/rknn_yolov5_demo/include/: Timer.h
Code/MowingRobot/stereo_yolo/rknpu2/examples/rknn_yolov5_demo/install/rknn_yolov5_demo_Linux/: rknn_yolov5_demo
Code/MowingRobot/stereo_yolo/rknpu2/examples/rknn_yolov5_demo/src/: detection.cc  main.cpp  ranging.cpp
Code/RK3588/: README.md
Code/RK3588/PIBot_ROS/pibot_upstart/: pibotenv
Code/RK3588/PIBot_ROS/ros_ws/src/common_utils/: CMakeLists.txt  package.xml
Code/RK3588/PIBot_ROS/ros_ws/src/laserscan_to_pointcloud/: CMakeLists.txt
Code/RK3588/PIBot_ROS/ros_ws/src/pibot/: package.xml
Code/RK3588/PIBot_ROS/ros_ws/src/pibot_3dsensor/: CMakeLists.txt  package.xml
Code/RK3588/PIBot_ROS/ros_ws/src/pibot_bringup/: CMakeLists.txt
Code/RK3588/Robot_ROS_APP/: README.md
Code/RK3588/Robot_ROS_APP/dataset/: data2.txt
Code/RK3588/Robot_ROS_APP/devel/: .catkin
Code/RK3588/Robot_ROS_APP/src/ros_merge_test/: CMakeLists.txt
Code/RK3588/Robot_ROS_APP/src/ros_merge_test/include/: align.h  read_sensor_data.h  system.h  type.h  uwb.h
Code/RK3588/Robot_ROS_APP/src/ros_merge_test/src/: align.cpp  main.cpp  mapping.cpp  read_sensor_data.cpp  system.cpp  uwb.cpp
Code/RK3588/Robot_ROS_Driver/: README.md
Code/RK3588/Robot_ROS_Driver/dataset/: data1.txt
Code/RK3588/Robot_ROS_Driver/devel/: .rosinstall  local_setup.sh  setup.sh
Code/RK3588/Robot_ROS_Driver/src/ros_merge_test/: CMakeLists.txt  package.xml
Code/RK3588/Robot_ROS_Driver/src/ros_merge_test/include/: align.h  mapping.h  read_sensor_data.h  senddata.h  system.h  type.h  uwb.h
Code/RK3588/Robot_ROS_Driver/src/ros_merge_test/src/: align.cpp  main.cpp  mapping.cpp  read_sensor_data.cpp  senddata.cpp  system.cpp  uwb.cpp
Code/RK3588/stereo_yolo/rknpu2/examples/: README.md
Code/RK3588/stereo_yolo/rknpu2/examples/rknn_yolov5_demo/: lib
Docs/: 1.ROS环境安装.md  2.PIbot-ROS安装.md  3566配置pibot_ros和全覆盖.md  ROS基础之基本函数.md  ROS环境安装.md  UWB建图指导.md  双目标定流程.md  算法模型在嵌入式平台上的部署.docx
Docs/Linux基础/: Linux环境变量.md
Docs/PIBot技术分析/: ROS机器人底盘-pibot_init_env介绍.md
Docs/ROS基础知识/: ROS基础之基本命令.md
(+121 files in other folders)
